cambios agregamos probando como funciona github

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Hello there</title>
 </head>
 <body>
-    <p>Hello students this is my site</p>
+    <p>Hello students this is my site. Aqui estamos probando como funciona github</p>
 </body>
 </html>
